benchmark/results/TEST-ROWS/10/df_pandas_executor/10000ROWS/RUN2/run.log
<<<<<<< HEAD
Traceback (most recent call last):
  File "/Users/eve/Desktop/S/6.5/forms/benchmark/test_driver.py", line 8, in <module>
    import forms as fs
  File "/Users/eve/Desktop/S/6.5/forms/forms/__init__.py", line 17, in <module>
    from forms.core.forms import compute_formula, config, print_spreadsheet_view
  File "/Users/eve/Desktop/S/6.5/forms/forms/core/forms.py", line 27, in <module>
    from forms.utils.executors import create_executor_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/utils/executors.py", line 16, in <module>
    from forms.executor.dfexecutor.planexecutor import DFPlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/planexecutor.py", line 24, in <module>
    from forms.executor.planexecutor import PlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/planexecutor.py", line 21, in <module>
    from forms.scheduler.utils import create_scheduler_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/utils.py", line 19, in <module>
    from forms.scheduler.dfscheduler.dfscheduler import DFSimpleScheduler, PrioritizedScheduler
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/dfscheduler.py", line 20, in <module>
    from forms.scheduler.dfscheduler.phase import create_phase_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/phase.py", line 21, in <module>
    from forms.executor.dfexecutor.utils import remote_access_planning
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/utils.py", line 229
    start_idx =
               ^
SyntaxError: invalid syntax
=======
Distributing data time: 0.6559402942657471
submit_one_func 0.22760486602783203
submit_one_func 0.0008981227874755859
submit_one_func 0.0010077953338623047
submit_one_func 0.0014688968658447266
submit_one_func 0.0017549991607666016
submit_one_func 0.0012569427490234375
submit_one_func 0.0010821819305419922
submit_one_func 0.001455068588256836
submit_one_func 0.0013158321380615234
submit_one_func 0.0033512115478515625
submit_one_func 0.0012621879577636719
submit_one_func 0.002494335174560547
Execution time: 37.48130798339844
Get table content time: 0.041156768798828125
Get table content time: 1.416827917098999
Get table content time: 1.6609511375427246
Get table content time: 1.973991870880127
Get table content time: 3.1032049655914307
Get table content time: 0.4192619323730469
Get table content time: 4.205277919769287
Get table content time: 3.0611047744750977
Get table content time: 2.227100133895874
Get table content time: 3.8606960773468018
Get table content time: 2.8791422843933105
Get table content time: 0.8726098537445068
Get table content time: 4.022936820983887
>>>>>>> df919a2c2abd8825d2dfa1628ca8da49051bf6c3
